--- a/emotion_diary/src/App.css
+++ b/emotion_diary/src/App.css
@@ -1,3 +1,11 @@
+/* font를 web 요청으로 가져옴 */
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&family=Nanum+Pen+Script&display=swap');
+
 .App {
   padding: 20px;
+
+  /* font-family속성은 제일 뒤에 있는 속성을 따른다 */
+  font-family: 'Nanum Pen Script', cursive;
+  /* 같은 라인에서는 제일 왼쪽에 있는 폰트가 적용된다 */
+  font-family: 'Dokdo', system-ui;
 }
